Swagger, date filter, summary endpoint
Maked swagger documentation. Added formatting date (moment library). Update date filter. Added summary endpoint.
